--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   maven-scm-1.8.1-source-release.zip: 980186753c84d6b878c017836e9535c819b17b97
+  maven-scm-1.9.2-source-release.zip: 13ba3f2bb281beeb9c671b0dab889326808d21b2
